# baxbench

./: .gitignore  IMPORTING_FROM_OTHER_PROJECTS.md  PIXI_GUIDE.md  PIXI_QUICK_REFERENCE.md  README.md  pyproject.toml
baxbench/: exploits.py  main.py  prompts.py  tasks.py
baxbench/env/: __init__.py  base.py  go.py  javascript.py  php.py  python.py  ruby.py  rust.py
baxbench/scenarios/: __init__.py  base.py  calculator.py  click_count.py  compiler.py  credit_card_service.py  file_search.py  forum.py  frame_extract.py  image_converter.py  image_transfer.py  logger.py  login.py  monitor.py  pdf_cat.py  pdf_to_text.py  product_catalog.py  profile_collection.py  recipes.py  recommendation_service.py  regex_search.py  secret_storage.py  shop_overview.py  shopping_cart_service.py  song_downloader.py  unsubscribe.py  uptime_service.py  user_creation.py  wiki.py  zip_to_txt.py
src/: __init__.py
